# bantz

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-all.txt  requirements-calendar.txt  requirements-dev.txt  requirements-http.txt  requirements-llm.txt  requirements-system.txt  requirements-vision.txt  requirements-voice.txt  requirements.txt  spec_voice_and_policy.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_planning.md  improvement.md
.github/issues/: ROADMAP.md  issue-801-skill-architecture.md  issue-802-rest-api.md  issue-803-weather-skill.md  issue-804-news-tracker.md  issue-805-classroom-skill.md  issue-806-proactive-engine.md  issue-807-brainstorm-skill.md  issue-808-autonomous-agent.md  issue-809-screen-interpretation.md  issue-810-smart-email.md  issue-811-self-evolving-agent.md  issue-812-opencode-integration.md  issue-813-daily-program.md  issue-814-tool-gap.md  issue-815-mobile-client.md
.github/workflows/: codeql.yml  dependency-review.yml  pr-checks.yml
bantz-browser/: README.md  package-lock.json  package.json
bantz-extension/: background.js  background.v2.js  content.js  manifest.json  manifest.v3.json  overlay.css  popup.html  popup.js
bantz-extension/content/: content.js  element-scanner.js  (+2 more)
config/: bantz-env.example  bantz.service  model-settings.yaml  music.yaml  permissions.yaml  policy.json  proactive.yaml  sandbox.yaml  site_profiles.json
docs/: acceptance-tests.md  architecture.md  confirmation-firewall.md  data-platform-schema.md  demo_brainloop_calendar.md  env-reference.md  gemini-hybrid-orchestrator.md  golden-paths.md  integration-map.md  issue-138-benchmark-complete.md  issue-141-memory-lite.md  issue-template-example.md  issues.md  jarvis-roadmap-v2.md  llm-router-guide.md  migration-legacy-removal.md  migration-ollama-to-vllm.md  model-strategy.md  quickstart.md  roadmap-v1.md  rtx4060-3b-vs-8b-benchmark.md  secrets-hygiene.md  sprint-summary.md  tool-catalog.md  vllm-integration-progress.md  vllm-poc-guide.md  vllm-validation-guide.md  voice-autocorrect-spec.md  voice-pipeline-e2e.md
requirements/: all.txt  llm.txt  system.txt  ui.txt
scripts/: bantz_resume.py  bench_3b_models.py  bench_hybrid_quality.py  bench_hybrid_vs_3b_only.py  bench_llm_orchestrator.py  bench_ttft_monitoring.py  bench_vllm.py  demo.py  demo_calendar_brainloop.py  demo_calendar_conversation.py  demo_free_slot_ux.py  demo_gemini_hybrid.py  demo_orchestrator.py  demo_tiered_quality.py  demo_ttft_realtime.py  e2e_run.py  e2e_voice_pipeline.py  generate_benchmark_report.py  generate_weekly_report.py  health_check_vllm.py  install_services.sh  jarvis.sh  latency_report.py  quickstart.sh  replay_router.py  replay_scenario.py  report_llm_metrics.py  service.sh  smoke_boot_ready.py  smoke_brainloop.py  smoke_brainloop_ollama.py  smoke_calendar_create_event.py  smoke_calendar_list_events.py  smoke_gmail_read.py  start_dual.sh  start_vllm_3b.sh  start_vllm_7b.sh  stop_vllm_servers.sh  sync_github_issues.sh  sync_requirements.py  (+11 more)
skills/: __init__.py
tests/: conftest.py  test_action_classifier.py  test_advanced_tts.py  test_agent_controller.py  test_agent_enhancements.py  test_agent_framework.py  test_agent_integration.py  test_agent_preflight_index_metadata.py  test_agent_preflight_scan.py  test_agent_preflight_text_resolution.py  test_agent_preflight_type_resolution.py  test_agent_recovery.py  test_agent_router_history.py  test_agent_signature_verification_loop.py  test_agent_status_nlu.py  test_agent_verification.py  test_analytics.py  test_animations.py  test_api_server.py  test_attention_gate.py  test_audit_log_confirmed_flag.py  test_audit_summary.py  test_auto_linker.py  test_automation_failsafe.py  test_automation_verifier.py  test_bargein.py  test_bench_vllm.py  test_benchmark_regression.py  test_benchmarks.py  test_brain_loop.py  test_brain_loop_observation_and_ask_user_guard.py  test_brainloop_event_stream.py  test_brainloop_finalizer_tool_results.py  test_brainloop_memory_manager.py  test_bug_fixes_1354_1357.py  test_calendar_all_day_events.py  test_calendar_cache.py  test_calendar_idempotency.py  test_calendar_intent_time_parsing.py  test_calendar_intent_timezone.py  (+392 more)
(+599 files in other folders)
