[project]
name = "bantz"
version = "0.1.0"
description = "Bantz - Local Jarvis (text-first)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bantz" }]
dependencies = []

[project.optional-dependencies]
browser = [
	"websockets>=11.0.0",
]
dev = [
	"pytest>=7.4.0",
	"tomli>=2.0.1",
]
llm = [
	"requests>=2.31.0",
]
vision = [
	"mss>=9.0.0",
	"Pillow>=10.0.0",
	"numpy>=1.24.0",
]
voice = [
	"requests>=2.31.0",
	"numpy>=1.24.0",
	"sounddevice>=0.4.6",
	"faster-whisper>=1.0.0",
	"pynput>=1.7.6",
	"rapidfuzz>=3.6.0",
]

[project.scripts]
bantz = "bantz.cli:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bantz"]
