[project]
name = "bantz"
version = "0.1.0"
description = "Bantz - Local Jarvis (text-first)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bantz" }]
dependencies = []

[project.optional-dependencies]
browser = [
	"websockets>=11.0.0",
]
dev = [
	"pytest>=7.4.0",
	"pytest-asyncio>=0.23.0",
	"tomli>=2.0.1",
]
input = [
	"pyperclip>=1.8.2",
]
llm = [
	"requests>=2.31.0",
]
voice = [
	"requests>=2.31.0",
	"numpy>=1.24.0",
	"sounddevice>=0.4.6",
	"faster-whisper>=1.0.0",
	"pynput>=1.7.6",
	"rapidfuzz>=3.6.0",
	"openwakeword>=0.6.0",
]
system = [
	"dbus-next>=0.2.3",
	"pynput>=1.7.6",
	"PyQt5>=5.15.0",
	"pystray>=0.19.0",
	"Pillow>=10.0.0",
]
ui = [
	"PyQt5>=5.15.0",
	"pystray>=0.19.0",
	"Pillow>=10.0.0",
]
vision = [
	"Pillow>=10.0.0",
	"mss>=9.0.0",
	"PyMuPDF>=1.24.0",
	"pytesseract>=0.3.10",
]
security = [
	"cryptography>=42.0.0",
]

# Convenience meta extra for local dev installs.
# Keep in sync with README.
all = [
	"bantz[browser]",
	"bantz[dev]",
	"bantz[input]",
	"bantz[llm]",
	"bantz[voice]",
	"bantz[system]",
	"bantz[vision]",
	"bantz[security]",
]

[project.scripts]
bantz = "bantz.cli:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bantz"]
